--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "NODE_ENV=production node server.js",
     "lint": "next lint"
   },
   "dependencies": {
@@ -26,6 +26,7 @@
     "graphql": "^16.6.0",
     "graphql-request": "^5.0.0",
     "graphql-tag": "^2.12.6",
+    "http": "^0.0.1-security",
     "joi": "^17.7.0",
     "micro": "^9.4.1",
     "next": "12.3.1",
@@ -41,7 +42,8 @@
     "react-toastify": "^9.1.1",
     "react-use-downloader": "^1.2.1",
     "stripe": "^10.17.0",
-    "styled-components": "^5.3.6"
+    "styled-components": "^5.3.6",
+    "url": "^0.11.0"
   },
   "devDependencies": {
     "babel-plugin-styled-components": "^2.0.7",
