--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,11 +29,6 @@
         "react-hooks/exhaustive-deps": "warn",
         "react/react-in-jsx-scope": "off",
         "react/prop-types": "off",
-        "prettier/prettier": [
-            "error",
-            {
-              "endOfLine": "auto"
-            }
-          ]
+        "prettier/prettier": 0
     }
 }
