--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "http": "^0.0.1-security",
     "joi": "^17.7.0",
     "micro": "^9.4.1",
+    "micro-cors": "^0.1.1",
     "next": "12.3.1",
     "next-auth": "^4.16.4",
     "next-pwa": "^5.6.0",
